--- a/docs/_posts/2020-11-01-deaths.md
+++ b/docs/_posts/2020-11-01-deaths.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Draft - Deaths
+title: Covid compared to other causes of death
 ---
 
 Covid has killed [about 220,000 people in the United States](https://covidtracking.com/). If you measure by "excess deaths," meaning deaths that have occurred this year in excess of what would have been statistically expected, and which are most likely under-counted Covid deaths, it is [over](https://twitter.com/lymanstoneky/status/1322253419491561473?s=20) [300,000](https://www.cdc.gov/mmwr/volumes/69/wr/mm6942e2.htm).
@@ -50,7 +50,9 @@ All Deaths | 53,000
 
 The low estimate, again, is not so different from unintentional injuries. But even the medium estimate would be the single largest cause of death over a year's time, eclipsing heart disease. The high estimate would be a disaster, nearly doubling the death count for the year. 
 
-Here is my conclusion from all of this. Covid is not smallpox or the Black Death; we are not looking at a third of the population dying. It is not even the Spanish Flu, where 0.65% of the US population died.[^Barry] But it is bad, and it is worth taking strong action to prevent. If our collective actions can prevent the medium estimate from occurring, and make the low estimate happen instead, it would save 10,000 lives. That would be like curing cancer for the year. There are certainly many questions as to the right actions and the right tradeoffs, but it is clear enough to me that the stakes are high.
+Here is my conclusion from all of this. Covid is not smallpox or the Black Death; we are not looking at a third of the population dying. It is not even the Spanish Flu, where 0.65% of the US population died.[^Barry] 
+
+But it is bad, and it is worth taking strong action to prevent. If our collective actions can prevent the medium estimate from occurring, and make the low estimate happen instead, it would save 10,000 lives. That would be like curing cancer for the year. There are certainly many questions as to the right actions and the right tradeoffs, but it is clear enough to me that the stakes are high.
 
 ----
 
