Update and rename 2020-01-01-mobility.md to 2020-11-15-mobility.md
Publish

--- a/docs/_posts/2020-11-15-mobility.md
+++ b/docs/_posts/2020-11-15-mobility.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: "Draft - Google mobility data"
+title: "Wisconsin mobility data"
 hidden: true
 ---
 
-Last Tuesday Governor Evers issued an executive order exhorting, but not requiring, Wisconsin residents to stay home as much as possible. Is there any way to know what effect these kind of orders have? How much are Wisconsin residents staying home, and how does it compare to the heavier lockdown in the spring?
+Last Tuesday Governor Evers issued an executive order exhorting, but not requiring, Wisconsin residents to stay home as much as possible. Is there any way to know what effect these kind of orders have? How much are Wisconsin residents staying home, and how does it compare to the lockdown in the spring?
 
 Since Covid started, [Google](https://www.google.com/covid19/mobility/) and [Apple](https://covid19.apple.com/mobility) have been publishing mobility statistics extracted from people's phones. They break it down by state and even by county, so I took a look for Wisconsin.
 
@@ -40,7 +40,7 @@ Another temptingly explanatory trend is that since September, the recreation mea
 
 These explanations are admittedly very speculative. Brown County's mobility numbers are higher than Milwaukee's, but not dramatically. Its recreation has recently decreased, but its score is still not any lower than Milwaukee and Madison, which are currently seeing rising case numbers. Ultimately I don't think the trends are clear enough to draw strong conclusions.
 
-This mobility data, while super interesting, also does has many limitations. First, it is all in terms of percentage change from that county's baseline in January. It does not show some kind of absolute measure of mobility. So Milwaukee's -20% and Brown County's -20% may in fact be different levels of activity. Second, it does not capture other important prevention measures such as mask usage, or other types of exposure such as gatherings in homes. Third, it is from Google so can obviously only capture people who use Google's mobile services.
+While super interesting, this mobility data also has many limitations. First, it is all in terms of percentage change from that county's baseline in January. It does not show some kind of absolute measure of mobility. So Milwaukee's -20% and Brown County's -20% may in fact be different levels of activity. Second, it does not capture other important prevention measures such as mask usage, or other types of exposure such as gatherings in homes. Third, since it is from Google it can only capture people who use Google's mobile services.
 
 What I think it does confirm, though, is that social behavior does directly impact the spread of the virus. The lockdown in spring prevented the kind of outbreak the state is seeing now. Our post-lockdown behavior was enough to stalemate the virus in the summer, and even now is slowing it down. If we keep that up, and take a few more precautions - preferably targeted ones, using the knowledge we have gained over the last 8 months - I think it will be worth it.
 
