Update and rename 2021-02-16-variants.md to 2021-02-20-variants.md

--- a/docs/_posts/2021-02-20-variants.md
+++ b/docs/_posts/2021-02-20-variants.md
@@ -4,7 +4,7 @@ title: "Variants"
 hidden: true
 ---
 
-This week there were three additional cases of the B.1.1.7 coronavirus variant detected in Wisconsin. What are these variants, and where does Wisconsin stand with them?
+This week three additional cases of the B.1.1.7 coronavirus variant were detected in Wisconsin. What is this variant, and what does it mean for Wisconsin?
 
 ### The manxome foe
 *Beware the Jabberwock, my son!  
@@ -12,24 +12,24 @@ This week there were three additional cases of the B.1.1.7 coronavirus variant d
 Beware the Jubjub bird, and shun  
 &emsp;&emsp; The frumious Bandersnatch!*[*](https://www.poetryfoundation.org/poems/42916/jabberwocky)
 
-The original coronavirus was bad enough (the Jabberwock = "Covid Classic", obviously). But as soon as we thought we might have that one handled, new variants of the virus have been discovered that threaten to transmit more easily or evade existing immunity.
+The original coronavirus was bad enough (the Jabberwock = "Covid Classic", obviously). But as soon as we thought we might have that one handled, new variants of the virus have sprung up to afflict us.
 
-The first important variant is B.1.1.7, which became dominant in the U.K. and is thought to be more transmissible and possibly more deadly than Covid Classic. The second is B.1.351, which emerged in South Africa and is thought to less affected by existing Covid immunity. This means that people who have already had Covid can be more easily reinfected, and that the existing vaccines appear to be less effective (though still partially effective to a greater or lesser degree).
+The first important variant is B.1.1.7, which became dominant in the U.K. and is thought to be more transmissible and possibly more deadly than Covid Classic. The second is B.1.351, which emerged in South Africa and is thought to less affected by existing Covid immunity. This means that people who have already had Covid can be more easily reinfected, and that the existing vaccines appear to be less effective to some degree.
       
 (Clearly the Jubjub bird is B.1.1.7, since as a bird it travels more easily, and the Bandersnatch is B.1.351, "frumious" meaning "less affected by existing immunity.")
 
-The [CDC has a page](https://www.cdc.gov/coronavirus/2019-ncov/transmission/variant.html) with more information on these two strains, as well as a third named P.1.  So far B.1.1.7 is the larger concern. Since it is more transmissible, once introduced it should gradually out-spread Covid Classic. If B.1.351, in contrast, is not inherently more transmissible but is somewhat more able to reinfect those with immunity, this is not immediately as great an advantage. Once most people have some natural or vaccinated immunity, this variant will probably become the bigger concern. (Although Moderna and other vaccine makers are talking about preparing booster shots for it.) 
+So far B.1.1.7 is the larger concern. Since it is more transmissible, once introduced it should gradually out-spread Covid Classic. If B.1.351, in contrast, is not inherently more transmissible but is somewhat more able to reinfect those with immunity, this is not immediately as great an advantage. Once most people have some natural or vaccinated immunity, this variant will probably become the bigger concern. (Although Moderna and other vaccine makers are talking about preparing booster shots for it.) 
       
 *He took his vorpal sword in hand;  
 &emsp;&emsp; Long time the manxome foe he sought—*  
 
-How common are these variants right now? The CDC also tracks [all known cases](https://www.cdc.gov/coronavirus/2019-ncov/transmission/variant-cases.html) in the United States by state. There are hundreds of known examples of B.1.1.7, but only a few of the others. California and Florida each have a few hundred known cases, and the other states only a smattering. Wisconsin has only had 5 known cases of B.1.1.7, and none of the others.
+How common are these variants right now? The CDC tracks [all known cases](https://www.cdc.gov/coronavirus/2019-ncov/transmission/variant-cases.html) in the United States by state. There are hundreds of known examples of B.1.1.7, but only a few of the others. California and Florida each have a few hundred known cases, and the other states only a smattering. Wisconsin has only had 5 known cases of B.1.1.7, and none of the others.
 
 A [recent preprint](https://www.medrxiv.org/content/10.1101/2020.12.18.20248479v1) estimated the prevalence of B.1.1.7 in the United States and how fast it is displacing Covid Classic. They estimated that at the end of January, B.1.1.7 accounted for 2% of cases in United States, and its *share* of cases was growing at 7% per day, which implies that it is about 40% more transmissible than Covid Classic.
 
 A growth rate of 7% per day corresponds to a doubling time of 10 days, which sounds alarming. But it is important to note that this is the growth in *share*, the proportion of all Covid cases that are from this variant. The overall numbers of Covid cases will follow the Classic trend - which is decreasing - until the variant becomes a substantial fraction of total cases. At that time, we could see another wave as the variant's increased transmission outweighs the our current resistance.
 
-### An uffish estimate for Wisconsin / Wisconsin is brillig
+### An uffish thought
 *So rested he by the Tumtum tree  
 &emsp;&emsp; And stood awhile in thought.*  
 
@@ -44,21 +44,18 @@ This is *not* a prediction, but an illustration of what might happen if current 
 
 First, every week almost two hundred thousand vaccines are getting administered, *snicker-snack*. Over 10% of Wisconsin residents have had at least one dose so far, and if we maintain this pace another 10% should have one or two doses by the end of March. This will include a majority of people over 65. There will still be a long ways to go, but this is enough vaccination to further reduce transmission and to prevent a large proportion of the worst outcomes.
 
-Second, I believe the virus must have a strong seasonal change in transmissibility, higher in winter and lower in summer. Every week that passes brings us closer to spring and greater safety.
+Second, I believe the virus must have a strong seasonal change in transmissibility, higher in winter and lower in summer. Every week that passes brings us closer to spring and lower transmission.
 
 Finally, the B.1.1.7 prevalence may not even be as high as 2% in Wisconsin. The paper's prevalence estimate for the United States did not include any samples from Wisconsin, because it was based on a single company's data. But Wisconsin has been doing its own decent amount of coronavirus sequencing. We have found 5 cases of B.1.1.7, but that is out of thousands of samples. [This article](https://www.postcrescent.com/story/news/2021/01/19/wisconsin-covid-19-gene-sequencing-detects-variants-like-b-1-1-7/6641060002/) from mid-January reports 4400 samples; presumably it is higher now. A total of 5 positives out of probably more than 5000 samples would suggest a prevalence more like 0.1% at the moment, not 2%. That buys us even more time.
 
-
-
-*And hast thou slain the Jabberwock?  
-&emsp;&emsp; Come to my arms, my beamish boy!  
-O frabjous day! Callooh! Callay!  
-&emsp;&emsp; He chortled in his joy.*
+So overall I am optimistic that vaccines and seasonality will win the race against B.1.1.7 in Wisconsin, although of course there is still much uncertainty. Soon things will be mimsy again...
 
 *’Twas brillig, and the slithy toves  
 &emsp;&emsp; Did gyre and gimble in the wabe:  
 All mimsy were the borogoves,  
 &emsp;&emsp; And the mome raths outgrabe.*  
 
-This was my mood when the results of the Pfizer virus trial were announced. 
-
+### More information
+- The [CDC has a page](https://www.cdc.gov/coronavirus/2019-ncov/transmission/variant.html) with more information on these two strains, as well as a third named P.1.
+- [A Twitter thread on the trajectory of the virus and the consequences of the variant](https://twitter.com/trvrb/status/1362438586511990788) by the virologist Trevor Bedford: "It's not clear to me at this point whether biological increase in transmissibility of B.1.1.7 will "win" against further improvements to seasonality and immunity in ~6 weeks time at the end of March."
+- [An accessible post on the genetics of the variants](https://blogs.sciencemag.org/pipeline/archives/2021/02/18/coronavirus-variants) from the medicinal chemist Derek Lowe. His blog is also a great source for information on vaccines.
