Update and rename i-like-mrna.md to 2021-05-10-mrna.md

--- a/docs/_posts/2021-05-10-mrna.md
+++ b/docs/_posts/2021-05-10-mrna.md
@@ -6,17 +6,20 @@ hidden: true
 
 Despite the new technology involved, I have no worries about the mRNA vaccines. Here's why I like them.
 
-### Wikipedia ahead
 First, a caveat. I am not a vaccinologist or anything close, so this is just the thinking of someone who reads too much Wikipedia. But hey, that's all of us this year, so maybe it's still useful. I welcome any corrections.
 
-Actually my favorite source on vaccine development is not Wikipedia, but [Derek Lowe's blog](). He is a scientist who has worked on drug discovery for many years. His blog is exceptionally helpful, accessible, and frank. I'll be linking to several of his posts.
+Actually my favorite source on vaccine development is not Wikipedia, but [Derek Lowe's blog](https://blogs.sciencemag.org/pipeline/). He is a scientist who has worked on drug discovery for many years. His blog is exceptionally helpful, accessible, and frank. I'll be linking to several of his posts.
 
-The mRNA vaccines work by delivering mRNA molecules, along with some fats, into your cells. Recalling from high school biology, mRNA is short for messenger RNA, and its normal purpose is to transfer instructions for making proteins from the permanent DNA in the nucleus to a cell's ribosomes, where the mRNA is translated into the correct sequence of molecules to build a specific protein. In the vaccine's case, the mRNA codes for the coronavirus "spike" protein, which is the spiky bit in the virus cartoons that you see, and helps it enter our cells.
+### What do they do?
+The mRNA vaccines work by delivering mRNA molecules, along with some fats (i.e. "lipid nanoparticles"), into your cells. Recalling from high school biology, mRNA is short for messenger RNA, and its normal purpose is to transfer instructions for making proteins from the permanent DNA in the nucleus to a cell's ribosomes, where the mRNA is translated into the correct sequence of molecules to build a specific protein. In the vaccine's case, the mRNA codes for the coronavirus "spike" protein, which is the spiky bit in the virus cartoons that you see, and helps it enter our cells.
 
 ![Covid WI spike protein.](../assets/spike-protein.png)
 
+The spike protein then finds its way to the cell surface, where it triggers the immune response. The reason we inject vaccines into a muscle, I recently learned, is because that keeps all this activity localized to that muscle and nearby lymph nodes. The vaccine and spike protein don't go circulating through the whole body. The immune response, in contrast, and as we want it to, spreads to the whole body.
+
 References:
-- [Derek Lowe on types of vaccines](https://blogs.sciencemag.org/pipeline/archives/2020/04/15/coronavirus-vaccine-prospects). 
+- [Derek Lowe on types of vaccines](https://blogs.sciencemag.org/pipeline/archives/2020/04/15/coronavirus-vaccine-prospects)
+- [Derek Lowe on spike protein behavior](https://blogs.sciencemag.org/pipeline/archives/2021/05/04/spike-protein-behavior)
 
 ### mmm, RNA?
 
