Update and rename 2021-05-10-mrna.md to 2021-05-09-mrna.md
Publish

--- a/docs/_posts/2021-05-09-mrna.md
+++ b/docs/_posts/2021-05-09-mrna.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Mmm, RNA
-hidden: true
+hidden: false
 ---
 
 I like the mRNA vaccines and do not think they are risky, even though they use new vaccine technology. Here's what I know about them.
@@ -11,11 +11,11 @@ I am not a vaccinologist or anything close, so this is just the summary of someo
 Actually my favorite source on vaccine development is not Wikipedia, but [Derek Lowe's blog](https://blogs.sciencemag.org/pipeline/). He is a scientist who has worked on drug discovery for many years. His blog is exceptionally helpful, accessible, and frank. I'll be linking to several of his posts.
 
 ### How they work
-The mRNA vaccines deliver mRNA molecules, bound up with some fats (i.e. "lipid nanoparticles"), into your cells. Recalling from high school biology, mRNA is short for messenger RNA, and its normal purpose is to transfer instructions for making proteins from the permanent DNA in the nucleus to a cell's ribosomes, where the mRNA is translated into the sequence of molecules to build a specific protein. In the vaccine's case, the mRNA codes for the coronavirus "spike" protein, which is the spiky bit in the virus cartoons that you see, and helps it enter our cells.
+The mRNA vaccines deliver mRNA molecules, bound up with some fats, into your cells. Recalling from high school biology, mRNA is short for messenger RNA, and its normal purpose is to transfer instructions for making proteins from the permanent DNA in the nucleus to a cell's ribosomes, where the mRNA is translated into the sequence of molecules to build a specific protein. In the vaccine's case, the mRNA codes for the coronavirus "spike" protein, which is the spiky bit in the virus cartoons that you see, and helps the virus enter our cells.
 
 ![Covid WI spike protein.](../assets/spike-protein.png){:style="display:block;margin-left:auto;margin-right:auto"}
 
-The spike protein then finds its way to the cell surface, where it triggers the immune response. The reason we inject vaccines into a muscle, I recently learned, is because that keeps all this activity localized to that muscle and nearby lymph nodes. The vaccine and spike protein don't go circulating through the whole body.
+The spike protein then finds its way from the ribosome to the cell surface, where it triggers an immune response. The reason we inject vaccines into a muscle, I recently learned, is because that keeps all this activity localized to that muscle and nearby lymph nodes. The vaccine and spike protein don't go circulating through the whole body.
 
 - [Derek Lowe on spike protein behavior](https://blogs.sciencemag.org/pipeline/archives/2021/05/04/spike-protein-behavior)
 
@@ -26,9 +26,9 @@ In fact, inserting RNA into our cells is also exactly what the coronavirus does.
 
 So sure, all things equal, I would rather not have foreign RNA inserted into my cells. But I would rather have it be the RNA for exactly one protein, precisely selected to prime my immune system to avoid a disease, rather than the entire genome of a hostile infectious cell-killing uncontrollably replicating invader.
 
-Inserting RNA or DNA into our cells is *also* exactly what many standard vaccines do. Many common vaccines, such as measles, rubella, one type of polio, and smallpox back in the day, are "attenuated virus" vaccines. This means they contain active virus that has been weakened or altered - bred in a certain sense, by letting it evolve in human cell lines in a lab - to not cause disease. It does still infect you, though, by inserting its genetic material into your cells and replicating. Because they mimic a real disease, these vaccines can provoke a strong, lasting immune response and are therefore very effective.
+Inserting RNA or DNA into our cells is *also* exactly what many standard vaccines do. Many common vaccines, such as measles, rubella, one type of polio, and smallpox back in the day, are "attenuated virus" vaccines. This means they contain active virus that has been weakened or altered - bred in a certain sense, by letting it evolve in human cell lines in a lab - to not cause disease. It does still infect you, though, by inserting its genetic material into your cells and replicating.
 
-And while our attenuated-virus vaccines have shown to be very safe, the mRNA technology actually does have an intrinsic safety advantage over them. Attenuated vaccines are still active viruses; they have a remote risk of regaining virulence and causing disease after all. That can't happen with the mRNA vaccine.
+So while our attenuated-virus vaccines have shown to be very safe, they are still active viruses, and they can have a remote risk of regaining virulence and causing disease after all. That can't happen with the mRNA technology, which gives it an intrinsic safety advantage.
 
 - [Derek Lowe on types of vaccines](https://blogs.sciencemag.org/pipeline/archives/2020/04/15/coronavirus-vaccine-prospects)
 - [CDC document, Principles of Vaccination](https://www.cdc.gov/vaccines/pubs/pinkbook/prinvac.html)
@@ -43,15 +43,15 @@ The testing was actually the longest part of the process. It was sped up with lo
 - [Podcast on the scientists who sequenced the spike protein](https://www.thisamericanlife.org/727/boulder-v-hill/act-two-12)
 
 ### HarmRNA?
-These clinical trials, as well as ongoing monitoring as the vaccines roll out, has satisfied me so far that these vaccines are indeed safe. The clinical trials, to begin with, enrolled tens of thousands of people and found no safety issues. (Not to mention the phenomenal 95% efficacy.)
+These clinical trials, as well as ongoing monitoring as the vaccines roll out, has satisfied me so far that these vaccines are indeed safe. To begin with, the trials enrolled tens of thousands of people and found no safety issues (and also phenomenal 95% efficacy at preventing Covid).
 
 Now, these trials cannot rule out very rare, one-in-a-million side effects, for the good reason that tens of thousands is less than a million. But by now the vaccines have been given to hundreds of millions of people, so we should start to see any rarer effects if they exist.
 
-The most serious side effect discovered so far is a risk of blood clots connected to the Johnson & Johnson vaccine, which is not an mRNA vaccine. The worst prevalence by age and sex is [11.8 cases per million shots in women 30-39](https://www.nytimes.com/2021/04/23/health/johnson-covid-vaccine-blood-clots.html "New York Times 23-Apr-2021").
+The most serious side effect discovered so far is a risk of blood clots connected to the Johnson & Johnson vaccine, which does not even use the mRNA technology. For this side effect, the worst prevalence by age and sex is [11.8 cases per million shots in women 30-39](https://www.nytimes.com/2021/04/23/health/johnson-covid-vaccine-blood-clots.html "New York Times 23-Apr-2021").
 
-So let's compare that to the risk of Covid. For the age group 30-39 in Wisconsin, so far there have been [47 deaths and 94000 cases](https://data.dhsgis.wi.gov/datasets/covid-19-historical-data-by-state/data?orderBy=DATE&orderByAsc=false "WI DHS data") recorded. We know the cases are an undercount of infections, so multiply by 4.  That comes to 125 deaths per million Covid infections.
+So let's compare that to the risk of Covid. For the age group 30-39 in Wisconsin, so far there have been [47 deaths and 94000 cases](https://data.dhsgis.wi.gov/datasets/covid-19-historical-data-by-state/data?orderBy=DATE&orderByAsc=false "WI DHS data") recorded. We know the cases are an undercount of infections, so multiply by, say, 4. That comes to 125 deaths per million Covid infections.
 
-There's uncertainty here, particularly in how many more clotting cases may be unreported. But I am comparing all the clotting cases (not just deaths), for the worst-hit age group, which is a relatively low-risk age group for Covid...and Covid is still 10x worse.
+There's uncertainty here, particularly in how many more clotting cases may be unreported. But I am comparing all the clotting cases (not just deaths), for the worst-hit age group, which is a relatively low-risk age group for Covid...and Covid is still 10x worse. And this wasn't even an mRNA vaccine! It seems to me they are looking pretty good.
 
 - [FDA authorization memorandum for Moderna](https://www.fda.gov/media/144673/download), containing the clinical trial analysis.
 - [Derek Lowe's post on getting vaccinated](https://blogs.sciencemag.org/pipeline/archives/2021/04/07/getting-vaccinated). Key passage: 
@@ -59,9 +59,9 @@ There's uncertainty here, particularly in how many more clotting cases may be un
     > For people who are honestly wondering about real immunological issues, though, I wanted to say that as someone who’s been doing drug discovery work for over 30 years now, and who has been covering the vaccine developments in detail with great interest during the entire pandemic, that I had no hesitation about rolling up my sleeve.
 
 ### The long and short of it
-The one area of risk where we do not have data would be for very long-term side effects, for the good reason that there hasn't been a long term yet. It's possible that after some months or years some ill effect of the vaccines will show up.
+The one area of risk where we do not have data is for very long-term side effects, for the good reason that there hasn't been a long term yet. It's possible that after some months or years some ill effect of the vaccines will show up.
 
-But certainly that has to be even more true of Covid?
+But doesn't that have to be even more true of Covid?
 
 Which is more likely to have unknown long term effects? A dose of mRNA that makes your body produce some spike protein one day in your shoulder muscle? Or a virus that delivers the same mRNA and more besides, wildly replicates throughout your respiratory tract over the course of at least a week, and even kills a percentage of its hosts?
 
