Update and rename 2021-05-30-the-immune.md to 2021-06-14-immune.md

--- a/docs/_posts/2021-06-14-immune.md
+++ b/docs/_posts/2021-06-14-immune.md
@@ -8,10 +8,10 @@ Wisconsin is about half vaccinated, but when you take into account previous infe
 
 To get an estimate of total immunity in the state, I'll start with the number of people vaccinated, which we know pretty well, and then incorporate the number of people with prior infections, which requires some estimation.
 
-My read on expert opinion is that both types of immunity - from vaccination and from prior infection - confer good protection going forward. There may be hairs to split between them, and in fact [a combination of the two may be the most protective](https://twitter.com/EricTopol/status/1396538615266627585), so it is likely still helpful to get vaccinated even if you have been infected before. But here I'll treat them as equivalent.
+My read on expert opinion is that both types of immunity - from vaccination and from prior infection - confer good protection going forward. There may be hairs to split between them, and in fact [a combination of the two may be the most protective](https://twitter.com/EricTopol/status/1396538615266627585) - so it is likely still helpful to get vaccinated even if you have been infected before. But here I'll treat them as equivalent.
 
 ### How many are vaccinated?
-The state DHS reports that 49% have received at least one dose of the vaccine. Oddly, the CDC reports a higher number of 52%. I don't know what to make of this discrepancy, which amounts to over a hundred thousand people and more than two weeks' worth of first doses. My best guess is that the CDC numbers are including some federal programs that aren't included in the state's data for some reason. I'll use the state's data because it is more detailed, but it may be that we have a few more percentage points of vaccinations than it shows.
+The state DHS reports that 49% have received at least one dose of the vaccine. Oddly, the CDC reports a higher number of 52%. I don't know what to make of this discrepancy, which amounts to close to two hundred thousand people and more than two weeks' worth of first doses. My best guess is that the CDC numbers are including some federal programs that aren't included in the state's data for some reason. I'll use the state's data because it is more detailed, but it may be that we have a few more percentage points of vaccinations than it shows.
 
 ### How many were infected?
 The number of confirmed cases in Wisconsin is about 610,000, or 10.5% of the population. But we know this underestimates the true number of infections, so we need more information.
