Update and rename delta.md to 2021-07-29-delta.md

--- a/docs/_posts/2021-07-29-delta.md
+++ b/docs/_posts/2021-07-29-delta.md
@@ -12,7 +12,9 @@ The Delta coronavirus variant, also known as B.1.617.2 - I think they're doing a
 
 ![Plot of variant share](../assets/Variant-Fraction_2021-07-28.png)
 
-We can see how the two most important variants, Alpha (B.1.1.7) and Delta (B.1.617.2) have taken over in turn. There are many other variants of course, but these have been the important ones because they brought a significant step up in transmissibility compared to previous strains. To see this more clearly, I multiplied these variant shares by the case numbers for Wisconsin to estimate which cases belong to each variant. The plot below shows how the last two case surges have both coincided with a new variant taking over and increasing its numbers, while the other variants continued declining.
+We can see how the two most important variants, Alpha (B.1.1.7) and Delta (B.1.617.2) have taken over in turn. There are many other variants of course, but these have been the important ones because each was a step up in transmissibility compared to previous strains. 
+
+To look at how the change in variant share influenced changes in cases, I multiplied these variant shares by the case numbers for Wisconsin to estimate which cases stemmed from each variant. The plot below shows how the last two case surges have both coincided with a new variant taking over and increasing its numbers, while the other variants continued declining.
 
 ![Plot of variant cases](../assets/Variant-Cases_2021-07-28.png)
 
@@ -21,7 +23,7 @@ Whatever combination of immunity and other factors was leading to the decline of
 ### The Delta delta
 As already seen, the Delta variant has caused a... delta in infections, which we can see in both detected cases and the test positivity rate.
 
-![Pos-Positivity plot](../assets/Pos-Positivity-WI_2021-07-28)
+![Pos-Positivity plot](../assets/Pos-Positivity-WI_2021-07-28.png)
 
 There could also certainly be contributions from seasonality (air conditioning weather) and the ongoing return to normal-ish behavior. Seasonality probably explains much of the differences between Wisconsin and the hotter southern states, which have it much worse right now.
 
@@ -29,7 +31,7 @@ If we look around the state, we can see these increases are happening pretty bro
 
 ![Map of case increases](../assets/Map-CaseChange-WI_2021-07-28.png)
 
-I don't see much of a regional pattern here, certainly not like [last fall in the northeast](https://covid-wisconsin.com/2020/10/11/status-update/#the-northeast). Milwaukee county appears to have the highest case rate, and as in previous surges the cases are concentrated in the north side of the city, which also has the lowest vaccination rates.
+I don't see much of a regional pattern here, certainly not like [last fall in the northeast](https://covid-wisconsin.com/2020/10/11/status-update/#the-northeast). Milwaukee County has the highest case rate, and there the cases are concentrated in the north side of the city, which also has the lowest vaccination rates.
 
 ![Milwaukee cases](../assets/Milwaukee-Map-Cases_2021-07-28.png)
 
